@@ -21,7 +21,6 @@ FEATURES:
 8 middleclick in content == p, and if command line is open, paste there the clipboard buffer
 8 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
 8 Use our own find-as-you-type mechanism (like conkeror does)
-8 A way to temporaily disable vimperator keys (for sites like gmail)
 7 make hints smarter, not only with characters from from hintchars, but use "NE" or "NP" for 'new posts' e.g. (might be too slow)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
 7 :hardcopy -> printing
@@ -36,7 +35,7 @@ FEATURES:
 6 pipe selected text/link/website to an external command
 6 macros (qq)
 6 :ls - show buffers
-6 support firefox search engines
+6 support firefox search engines, or at least make our search enginges user configurable
 6 gf = view source?
 6 make a real one-tab-mode, divert _all_ other targets, possible by setting a firefox option (set popup=0-3)
 6 Shift-Insert in textboxes pastes clipboard contents
